Closed Bug 63268 Opened 24 years ago Closed 24 years ago

contents not resized on new window opened maximized

Categories

(Core :: XUL, defect)

x86
Windows 2000
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla0.8

People

(Reporter: danm.moz, Assigned: danm.moz)

References

Details

Attachments

(1 file)

Related to bug 32148. At this point, that's almost working (arguably: wade 
through the discussion there if you like). But there's a problem on Windows.

1) run the Mozilla browser
2) maximize the browser window
3) close it
4) repeat step 1

The window is opened maximized (yea), but its contents are still sized to the 
window's normal, unmaximized state (boo). This is probable because the window 
never gets a WM_SIZE message. The following patch fixes this problem by 
deferring the ::ShowWindow call used to set the min/max state to a later time, 
when the window would be shown normally. Unfortunately it also messes with the 
somewhat delicate nsWindow::Show method. I think it's harmless, though.
Blocks: 32148
Status: NEW → ASSIGNED
No longer blocks: 32148
Blocks: 32148
I applied the patch and it does not effect dropdowns because the of of type 
"eWindowType_child", and the only place I can see where toplevel are being 
created are in: nsAppShellService::JustCreateTopWindow. It worked as advertised.

It looks like all the bases are covered.

r=rods
Thanks rods!
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla0.8
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: