defer setting of a new window's min/max state until it's ready to be opened normally. (and alphabetized contributors). tweak to rev 3.308. bug 63268 r=hyatt,rods